--- a/src/app/projetos/projetos.component.html
+++ b/src/app/projetos/projetos.component.html
@@ -3,12 +3,7 @@
   <h2 class="section-title">Projetos Destacados</h2>
   
   <div *ngIf="isLoading" class="loading">
-    <svg width="32" height="32" viewBox="0 0 50 50" style="vertical-align: middle; margin-right: 8px;">
-      <circle cx="25" cy="25" r="20" fill="none" stroke="#86b5c5" stroke-width="5" stroke-linecap="round" stroke-dasharray="31.4 31.4" transform="rotate(-90 25 25)">
-        <animateTransform attributeName="transform" type="rotate" from="0 25 25" to="360 25 25" dur="1s" repeatCount="indefinite"/>
-      </circle>
-    </svg>
-    Mais projetos em breve...
+    Mais projetos no <a href="https://github.com/caio2203" target="_blank" rel="noopener noreferrer" class="github-link">meu GitHub!</a>
   </div>
   
   <div *ngIf="error" class="error-message">
@@ -46,10 +41,15 @@
       </div>
       
       <div class="project-links">
-        <a [href]="project.html_url" target="_blank" rel="noopener noreferrer">
-          <svg width="18" height="18" fill="#fff" viewBox="0 0 24 24" style="vertical-align: middle; margin-right: 6px;"><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.084-.729.084-.729 1.205.084 1.84 1.236 1.84 1.236 1.07 1.834 2.809 1.304 3.495.997.108-.775.418-1.305.762-1.605-2.665-.305-5.466-1.334-5.466-5.931 0-1.31.469-2.381 1.236-3.221-.124-.303-.535-1.523.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.553 3.297-1.23 3.297-1.23.653 1.653.242 2.873.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.803 5.624-5.475 5.921.43.371.823 1.102.823 2.222 0 1.606-.014 2.898-.014 3.293 0 .322.216.694.825.576C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/></svg>
-          Código
-        </a>
+        <ng-container *ngIf="project.html_url && !project.html_url.includes('privado'); else comercialMsg">
+          <a [href]="project.html_url" target="_blank" rel="noopener noreferrer">
+            <svg width="18" height="18" fill="#fff" viewBox="0 0 24 24" style="vertical-align: middle; margin-right: 6px;"><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.084-.729.084-.729 1.205.084 1.84 1.236 1.84 1.236 1.07 1.834 2.809 1.304 3.495.997.108-.775.418-1.305.762-1.605-2.665-.305-5.466-1.334-5.466-5.931 0-1.31.469-2.381 1.236-3.221-.124-.303-.535-1.523.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.553 3.297-1.23 3.297-1.23.653 1.653.242 2.873.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.803 5.624-5.475 5.921.43.371.823 1.102.823 2.222 0 1.606-.014 2.898-.014 3.293 0 .322.216.694.825.576C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/></svg>
+            Código
+          </a>
+        </ng-container>
+        <ng-template #comercialMsg>
+          <small>Projeto comercial, código não disponível publicamente.</small>
+        </ng-template>
         <a *ngIf="project.homepage" [href]="project.homepage" target="_blank" rel="noopener noreferrer">
           <svg width="16" height="16" fill="#fff" viewBox="0 0 24 24" style="vertical-align: middle; margin-right: 6px;"><path d="M14 3v2h3.59l-4.83 4.83 1.41 1.41L19 6.41V10h2V3z"/><path d="M5 5v14h14v-7h-2v5H7V7h5V5z"/></svg>
           Demo
