--- a/src/app/sobre-mim/sobre-mim.component.html
+++ b/src/app/sobre-mim/sobre-mim.component.html
@@ -3,9 +3,9 @@
   <h2 class="section-title">Sobre Mim</h2>
   <div class="about-container">
     <div class="about-text">
-      <p>Olá! Sou Caio Gonçalves Vieira, Cientista de Dados com experiência em Machine Learning, Análise de Dados e Desenvolvimento de Software.</p>
-      <p>Minha paixão é transformar dados complexos em soluções práticas que geram valor para negócios e sociedade.</p>
-      <p>Com formação em Ciência da Computação e diversos cursos de especialização, trago uma abordagem multidisciplinar para resolver problemas desafiadores.</p>
+      <p>Olá! Sou Caio Gonçalves Vieira, Engenheiro de Dados Jr. com experiência em manuntenção e formação de pipelines, análise de dados, desenvolvimento e automação de processos.</p>
+      <p>Sou apaixonado por projetar e otimizar pipelines de dados escaláveis, garantindo a integridade, disponibilidade e governança da informação para habilitar análises avançadas e decisões orientadas por dados.
+      <p>Cursando Sistemas de Informação e com experiência prática na área, trago uma abordagem multidisciplinar para resolver problemas desafiadores.
     </div>
     <div class="tilt-box profile-tilt" #tiltBox>
       <div style="height: 350px; background: rgba(255,255,255,0.05); display: flex; align-items: center; justify-content: center;">
