esperando o modelo 3d e ajustes no texto

--- a/src/app/sobre-mim/sobre-mim.component.html
+++ b/src/app/sobre-mim/sobre-mim.component.html
@@ -4,7 +4,7 @@
   <div class="about-container">
     <div class="about-text">
       <p>Olá! Sou Caio Gonçalves Vieira, Engenheiro de Dados Jr. com experiência em manuntenção e formação de pipelines, análise de dados, desenvolvimento e automação de processos.</p>
-      <p>Sou apaixonado por projetar e otimizar pipelines de dados escaláveis, garantindo a integridade, disponibilidade e governança da informação para habilitar análises avançadas e decisões orientadas por dados.
+      <p>Sou apaixonado por projetar e escalar pipelines de dados eficientes, assegurando a integridade, disponibilidade e governança da informação, com o objetivo de viabilizar análises avançadas e decisões orientadas por dados. Também possuo experiência em ambientes Linux, principalmente com Ubuntu Server e Fedora, onde atuo na automação de tarefas, deploy de serviços e administração de servidores pessoais.
       <p>Cursando Sistemas de Informação e com experiência prática na área, trago uma abordagem multidisciplinar para resolver problemas desafiadores.
     </div>
     <div class="tilt-box profile-tilt" #tiltBox>
