--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -7,7 +7,8 @@
     </div>
 
     <div class="hero-illustration">
-      <img src="assets/teclado/Adobe Express - file.png" alt="Teclado estilizado" style="width: 100%; max-width: 500px; display: block; margin: 0 auto;" />
+      <div id="neural3d-container" style="width: 100%; height: 100%; position: relative;"></div>
+      <div id="loading3d" class="loading3d"></div>
     </div>
     
   </div>
